Fixed Appearance.layer translation.